--- a/authentication/templates/authentication/home.html
+++ b/authentication/templates/authentication/home.html
@@ -1,1 +1,19 @@
-<a href="logout">logout</a>
+<html>
+    <head>
+        <title>
+            signout
+        </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    </head>
+    <body>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container text-center">
+                <h1>Logged in successfully</h1>
+            </div>
+        </div>
+        <div class="text-center">
+            <h4>Do you want to logout</h4>
+            <a href="logout">logout</a>
+        </div>
+    </body>
+</html>
