--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,9 +1,23 @@
-<div class="container py-5">
-    <h1>Login</h1>
-    <form method="POST">
-      {% csrf_token %}
-      {{ login_form }}
-      <button class="btn btn-primary" type="submit">Login</button>
-    </form>
-    <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
-  </div>
+<html>
+  <head>
+    <title>
+      login
+    </title>
+    <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  </head>
+  <body>    
+    <div class="container py-5 text-center" align='text-center'>
+      <h1>Login</h1>&nbsp;&nbsp;<hr>
+      <form method="POST">
+        <div class="form-group">
+          {% csrf_token %}
+          {{ login_form.as_p }}
+          <button class="btn btn-primary" type="submit">Login</button><hr><br>
+        </div>
+        <br>
+        <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
+      </form>
+    </div>
+  </body>
+</html>
